# NSE-Chatbot

./: .gitignore  README.md  chatui.py  config.py  graph.py  main.py  mcp_tools.py  messages.py  pyproject.toml  server_config.py
.github/workflows/: azure-webapp-python-deploy.yml  hf-co-spaces-deploy.yml  main_nse-chatbot.yml  update_space.yml
agent/: config.py  graph.py  local_tools.py  messages.py  model.py
chat/: agent_chat.py  model.py  utils.py
dbman/: __init__.py  actions.py  helper.py  nse_metadata.py
mcp_tools/: config.py  helper.py  main.py  models.py  nse_http.py  tools.py
migrations/: env.py
migrations/versions/: 528183301ff6_add_additional_industry_info_in_db.py  906b711c75f1_add_industry_in_nse_metadata.py  9b360e87d697_add_refresh_date_time_field_for_audit_.py  f0f69de9f8d6_add_additional_trade_details.py  f22e3c0aff24_metadata_table.py
nse/: config.py  helper.py  models.py  nse_http.py  testclient.py
ui/: chatui.py  config.py  examples.py  graph.py  messages.py  model.py  theme.py
ui/components/: docs.py  navbar.py
