[project]
name = "nse-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.118.3",
    "fastmcp>=2.13.0.2",
    "gradio>=5.49.1",
    "httpx>=0.28.1",
    "langchain>=1.0.5",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.3",
    "mcp>=1.21.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.27",
    "thefuzz>=0.22.1",
    "uvicorn>=0.38.0",
]

[tool.basedpyright]
reportUnusedCallResult = false
reportUnknownVariableType = false
reportUnknownMemberType = false
